src/test/deca/context/invalid/self/doubleDeclarationParametre.deca
class A{
    void inutile(int x, int x){
        int y = x+x;
    }
}